# epicfree

./: .gitignore  pyproject.toml
.github/workflows/: deploy-pages.yml  update-games.yml
src/: main.py
src/application/: __init__.py
src/application/use_cases/: __init__.py  enrich_ratings.py  save_games.py
src/config/: __init__.py  settings.py
src/domain/: __init__.py
src/domain/entities/: __init__.py  game.py
src/domain/ports/: __init__.py  game_fetcher.py  game_repository.py  rating_fetcher.py
src/domain/value_objects/: __init__.py  free_period.py  genre.py  rating.py
src/infrastructure/: __init__.py
src/infrastructure/adapters/: __init__.py  composite_rating_adapter.py  epic_api_adapter.py  steam_api_adapter.py
src/infrastructure/repositories/: __init__.py  json_file_repo.py
tests/: conftest.py
tests/domain/: test_rating.py
tests/infrastructure/: test_epic_api_adapter.py  test_json_file_repo.py
web/: about.html  contact.html  index.html  manifest.json  privacy.html  robots.txt  sitemap.xml  sw.js
web/css/: style.css
web/data/: games-free.json
web/js/: main.js  utils.js
