[project]
name = "epicfree"
version = "0.1.0"
description = "Epic Games Store 무료게임 정보 + 평점 웹사이트"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "epicstore-api>=0.1.5",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
